components/shared/terminal/tests/snapshots/snapshot_tests__two_stages_one_failed_full_error_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Failed Task (fail) [TIME]
   ✖  Step One (fail) [TIME]
   │
   │ issue:    Fail
   │
   │ context:  No Context
   │
   │ solution: No Solution
   ·  Step Two
