components/shared/terminal/tests/snapshots/snapshot_tests__two_stages_one_failed_full_error_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[TASK] Failed Task
[Failed Task]    [WAIT] Step One
[Failed Task]    [WAIT] Step Two
[Failed Task]  > [START] Step One (Running)
[Failed Task]    [FAIL] Step One (fail) [TIME]
[Failed Task]    │
[Failed Task]    │ issue:    Fail
[Failed Task]    │
[Failed Task]    │ context:  No Context
[Failed Task]    │
[Failed Task]    │ solution: No Solution
[FAIL] Failed Task (fail) [TIME]
