components/shared/terminal/tests/snapshots/snapshot_tests__two_stages_one_ok_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
▶ One Stage is Ok
   ·  Step One
   ✔  Step Two (Ok) [TIME]
